implementing home parallax effect - part 1

--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,7 +1,33 @@
 <!-- <p>inicio works!</p> -->
 
-<div class="body">
-	<!-- ------------------------- Header Video --------------------------- -->
+<div class="body2">
+	<section>
+		<img src="../../../assets/stars.png" id="stars">
+		<img src="../../../assets/moon.png" id="moon">
+		<img src="../../../assets/mountains_behind.png" id="mountains_behind">
+		<h2 id="text">Moon Light</h2>
+		<a href="#sec" id="superBtn">Explore</a>
+		<img src="../../../assets/mountains_front.png" id="mountains_front">
+	</section>
+
+	<div class="sec" id="sec">
+		<h2>Parallax Scrolling Effects</h2>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error pariatur itaque culpa ullam esse cumque. Consequatur velit aliquid laborum expedita adipisci sed distinctio temporibus minima, quae optio vitae obcaecati! Hic officiis labore recusandae! Est in illo veniam vel quisquam error vitae eveniet? Reprehenderit aut dignissimos libero harum natus architecto, ipsum incidunt doloremque dolores, similique in porro pariatur! Beatae, provident soluta, possimus a in perferendis ad, ratione necessitatibus quia quam obcaecati repudiandae fugit quo nobis animi dolore vel error. Ab eaque ex nulla, dignissimos sapiente corporis blanditiis corrupti quis, impedit itaque odio facilis earum fuga commodi totam! Accusamus, deleniti? Tempore, qui!</p>
+		<br><br>
+		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic et odio aliquid quod, amet perspiciatis dolor, laborum molestias inventore, soluta mollitia. Corrupti, vitae dolorum. Odit in sequi autem eveniet. Hic, tenetur! Fugit in nobis aspernatur quibusdam quia. Quia nesciunt neque necessitatibus ad assumenda! Alias omnis facere dolore est, aut expedita laborum iste id quasi quidem et consequuntur. Ullam officiis voluptas culpa, recusandae enim quod deleniti similique ut dolor sunt iusto amet eaque, fugiat aut. Quisquam unde odit deserunt molestias ullam quasi aliquam. Aliquid vel porro repudiandae temporibus ullam! Expedita aperiam labore velit deleniti officiis unde error ipsam cumque fuga molestiae?</p>
+		<br><br>
+		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic et odio aliquid quod, amet perspiciatis dolor, laborum molestias inventore, soluta mollitia. Corrupti, vitae dolorum. Odit in sequi autem eveniet. Hic, tenetur! Fugit in nobis aspernatur quibusdam quia. Quia nesciunt neque necessitatibus ad assumenda! Alias omnis facere dolore est, aut expedita laborum iste id quasi quidem et consequuntur. Ullam officiis voluptas culpa, recusandae enim quod deleniti similique ut dolor sunt iusto amet eaque, fugiat aut. Quisquam unde odit deserunt molestias ullam quasi aliquam. Aliquid vel porro repudiandae temporibus ullam! Expedita aperiam labore velit deleniti officiis unde error ipsam cumque fuga molestiae?</p>
+		<br><br>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error pariatur itaque culpa ullam esse cumque. Consequatur velit aliquid laborum expedita adipisci sed distinctio temporibus minima, quae optio vitae obcaecati! Hic officiis labore recusandae! Est in illo veniam vel quisquam error vitae eveniet? Reprehenderit aut dignissimos libero harum natus architecto, ipsum incidunt doloremque dolores, similique in porro pariatur! Beatae, provident soluta, possimus a in perferendis ad, ratione necessitatibus quia quam obcaecati repudiandae fugit quo nobis animi dolore vel error. Ab eaque ex nulla, dignissimos sapiente corporis blanditiis corrupti quis, impedit itaque odio facilis earum fuga commodi totam! Accusamus, deleniti? Tempore, qui!</p>
+		<br><br>
+		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic et odio aliquid quod, amet perspiciatis dolor, laborum molestias inventore, soluta mollitia. Corrupti, vitae dolorum. Odit in sequi autem eveniet. Hic, tenetur! Fugit in nobis aspernatur quibusdam quia. Quia nesciunt neque necessitatibus ad assumenda! Alias omnis facere dolore est, aut expedita laborum iste id quasi quidem et consequuntur. Ullam officiis voluptas culpa, recusandae enim quod deleniti similique ut dolor sunt iusto amet eaque, fugiat aut. Quisquam unde odit deserunt molestias ullam quasi aliquam. Aliquid vel porro repudiandae temporibus ullam! Expedita aperiam labore velit deleniti officiis unde error ipsam cumque fuga molestiae?</p>
+		<br><br>
+		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic et odio aliquid quod, amet perspiciatis dolor, laborum molestias inventore, soluta mollitia. Corrupti, vitae dolorum. Odit in sequi autem eveniet. Hic, tenetur! Fugit in nobis aspernatur quibusdam quia. Quia nesciunt neque necessitatibus ad assumenda! Alias omnis facere dolore est, aut expedita laborum iste id quasi quidem et consequuntur. Ullam officiis voluptas culpa, recusandae enim quod deleniti similique ut dolor sunt iusto amet eaque, fugiat aut. Quisquam unde odit deserunt molestias ullam quasi aliquam. Aliquid vel porro repudiandae temporibus ullam! Expedita aperiam labore velit deleniti officiis unde error ipsam cumque fuga molestiae?</p>
+	</div>
+</div>
+
+
+<!-- <div class="body">
 
 	<div class="v-header container">
             
@@ -32,7 +58,6 @@
 					y respecto a los estilos se volvío a instalar AngularMaterial y se importaron las librerías de Bootstrap y Bootswatch.
 					</p>
 				<br><br><br>
-				<!-- <a class="btn" routerLink='/login' *ngIf="userInfo | async as user; else GoButton">Login !</a> -->
 				<a class="btn" (click)="goToBookList()" *ngIf="userInfo | async as user; else GoButton">Vamos allá !</a>
 				<ng-template #GoButton>
 					<a class="btn" routerLink='/login'>Login !</a>
@@ -41,4 +66,4 @@
 		</div>
 		
 	</div>
-</div>
+</div> -->
