--- a/src/app/components/inicio/inicio.component.scss
+++ b/src/app/components/inicio/inicio.component.scss
@@ -1,133 +1,3 @@
-*{
-    box-sizing: border-box;
-}
-
-.body{
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1rem;
-    line-height: 1.5;
-    color: #333;
-    overflow-x: hidden;
-}
-
-/* ---------------- Header Video -------------------- */
-
-.v-header{
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    color: #fff;
-    z-index: 100;
-}
-
-.container{
-    max-width: 960px;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    margin: auto;
-    text-align: center;
-    z-index: 100;
-}
-
-.fullscreen-video-wrap{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    z-index: 100;
-}
-
-.header-overlay{ 
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    opacity: 0.8; 
-    z-index: 100;
-}                  
-
-#miVideo{
-    position: fixe;
-    z-index: -1;
-
-    width: 100%;
-    height: auto;
-    z-index: 100;
-}
-
-
-.header-content{
-    z-index: 2;
-    z-index: 100;
-}   
-
-.header-content h1{
-    font-size: 50px;
-    margin-bottom: 0;
-    background-color: crimson;
-    width: 30%;
-    height: 60px;
-    margin: 0px auto;
-    margin-top: 4%;
-    border-radius: 25px;
-    padding-top: 13px;
-    z-index: 100;
-}
-
-.header-content p{
-    font-size: 1.5rem;
-    display: block;
-    padding-bottom: 0.75rem;
-    background-color: crimson;
-    border-radius: 25px;
-    width: 80%;
-    margin: 0px auto;
-    margin-top: 3%;
-    padding-top: 3px;
-    z-index: 100;
-}                          
-
-.btn{
-    background: #34b3a0;
-    color: #fff;
-    font-size: 1.2rem;
-    padding: 1rem 2rem;
-    text-decoration: none;
-    border-radius: 25px;
-    z-index: 100;
-}
-
-@media(min-aspect-ratio: 16/9){
-    #miVideo{
-        width: 100%;
-        height: auto;
-    }
-}
-
-@media(max-aspect-ratio: 16/9){
-    #miVideo{
-        width: auto;
-        height: 100%;
-    }
-}
-
-@media(max-width: 767px){
-    #miVideo{
-        display: none;
-    }
-    body{
-        background: url('#');
-        background-size: cover;
-    }
-}
-
-/************* Inicio_v2 - Parallax Effect ****************/
-
 * {
     margin: 0;
     padding: 0;
@@ -136,13 +6,15 @@
     scroll-behavior: smooth;
 }
 
-.body2 {
+/******************** Parallax Effect ******************/
+
+.body1 {
     min-height: 100vh;
     overflow-x: hidden;
     background: linear-gradient(#2b1055, #7597de);
 }
 
-section {
+.section1 {
     position: relative;
     width: 100%;
     height: 100vh;
@@ -153,7 +25,7 @@ section {
     overflow: hidden;
 }
 
-section::before {
+.section1::before {
     content: '';
     position: absolute;
     bottom: 0;
@@ -163,7 +35,7 @@ section::before {
     z-index: 1000;
 }
 
-section img {
+.section1 img {
     position: absolute;
     top: 0;
     left: 0;
@@ -173,11 +45,11 @@ section img {
     pointer-events: none;
 }
 
-section img#moon {
+.section1 img#moon {
     mix-blend-mode: screen;
 }
 
-section img#mountains_front {
+.section1 img#mountains_front {
     z-index: 10;
 }
 
@@ -200,6 +72,7 @@ section img#mountains_front {
     font-size: 1.5em;
     z-index: 9;
     transform: translateY(100px);
+    cursor: pointer;
 }
 
 .sec {
@@ -218,3 +91,65 @@ section img#mountains_front {
     font-size: 1em;
     color: #fff;
 }
+
+/*********** Non-Rectangular Header - Circle no scroll tranform ************/
+/*
+.body2 {
+    min-height: 150vh;
+}
+
+.section2 {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background: url(../../../assets/don-alberto-y-luis.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    clip-path: circle(180vh at 50% -80vh);
+}
+
+.section2 .content1 {
+    max-width: 1000px;
+    text-align: center;
+}
+
+.section2 .content1 .h2-2 {
+    font-size: 5em;
+    color: #fff;
+    font-weight: 700;
+}
+*/
+
+/*********** Non-Rectangular Header - Circle scroll tranform ************/
+.body2 {
+    height: 60vh;
+    background: #111;
+}
+
+
+.section2 {
+    position: absolute;
+    width: 100%;
+    height: calc(100% - 200px);
+    background: #2abbff;
+    // background: url(../../../assets/);
+}
+
+.section2 .curve {
+    position: absolute;
+    bottom: -200px;
+    height: 200px;
+    width: 100%;
+    transform-origin: top;
+}
+
+.section2 .curve .img2 {
+    width: 100%;
+    height: 100%;
+}
+
+/*********** Non-Rectangular Header - Triangle ************/
+
